examples/test/testpolicy2349.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2349
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key15: value24
      key10: value45
      key38: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value9
      podSelector:
        matchLabels:
          key35: value14
          key33: value22
